# generative-ai

./: .gitignore  LICENSE  README.md  memo.md  pyproject.toml
generative_ai/artifacts/: tokenizer.json
generative_ai/models/: __init__.py  model.py
generative_ai/scripts/: create_tokenizer.py  generate.py  train.py
