[tool.poetry]
name = "generative-ai"
version = "0.1.0"
description = ""
authors = ["Shion Honda <26x.orc.ed5.1hs@gmail.com>"]
readme = "README.md"
packages = [{include = "generative_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
numpy = "^1.25.0"
torchtext = "^0.15.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
